feat(electron): Implement Electron for desktop app
Integrates the AI Bookmark Manager into an Electron application, enabling desktop installation and execution. This includes setting up Electron-specific build scripts, configurations, and entry points.

--- a/index.html
+++ b/index.html
@@ -33,12 +33,15 @@
     "react": "https://aistudiocdn.com/react@^19.2.1",
     "@dnd-kit/core": "https://aistudiocdn.com/@dnd-kit/core@^6.3.1",
     "@dnd-kit/sortable": "https://aistudiocdn.com/@dnd-kit/sortable@^10.0.0",
-    "@dnd-kit/utilities": "https://aistudiocdn.com/@dnd-kit/utilities@^3.2.2"
+    "@dnd-kit/utilities": "https://aistudiocdn.com/@dnd-kit/utilities@^3.2.2",
+    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.2",
+    "vite": "https://aistudiocdn.com/vite@^7.2.7"
   }
 }
 </script>
 </head>
   <body>
     <div id="root"></div>
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
